# plugin-htmlkit

./: .gitignore  README.md  main.py  malloc.html  pyproject.toml  render_demo.py  setup.py  test-pyproject.toml  xmake.lua
.github/workflows/: build.yml
core/: cairo_jpg.c  cairo_wrapper.cpp  cairo_wrapper.h  container_info.h  font_wrapper.cpp  font_wrapper.h  htmlkit_container.cpp  htmlkit_container.h  lib.cpp  py_synchron.cpp  py_synchron.h
demo/: cairo_font.cpp  container_cairo.cpp  container_cairo.h  dull_gdiplus_container.h  gdiplus_container.cpp  gdiplus_container.h  main.cpp  win32_container.cpp  win32_container.h  windows_container.cpp  windows_container.h
nonebot_plugin_htmlkit/: __init__.py  config.py  core.pyi
src/: cairo_font.cpp  conic_gradient.cpp  dull_gdiplus_container.cpp  gdiplus_container.cpp  windows_container.cpp
tests/: conftest.py  img_comparer.py  test_data_scheme.py  test_load.py  test_render.py  test_webpage.py
