[project]
name = "nonebot-plugin-htmlkit"
version = "0.1.0"
description = "Lightweight HTML rendering plugin for NoneBot"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nonebot2~=2.3",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "auditwheel>=6.4.2 ; sys_platform == 'linux'",
    "nonebot-adapter-console>=0.9.0",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot2[fastapi]>=2.4.3",
    "nonemoji>=0.1.4",
]
